# saml-sp

apache-saml-sp-modules/: README.md
apache-saml-sp-modules/src/: .gitignore  Makefile.am  configure.ac
apache-saml-sp-modules/src/ErrorDocuments/: HTTP500.html  ReadMe.md
apache-saml-sp-modules/test/: .gitignore  Makefile.am  ReadMe.md  mod_saml_sp.c  saml-sp.conf
apache-saml-sp-modules/test/ErrorDocuments/: HTTP400.html  HTTP404.html
apache-saml-sp-modules/test/keyfiles/: rsaprivkey.der  rsaprivkey.pem  rsapubkey.der
apache-saml-sp-modules/test/saml/: index.html  sign-res.xml
apache-saml-sp-modules/test/saml/pages/: browse.html  logout.html
nginx-saml-sp-modules/: README.md  config
nginx-saml-sp-modules/src/: cookies.c  cookies.h  crypto.c  crypto.h  logging.c  logging.h  ngx_http_saml_sp_module.c  ngx_http_saml_sp_module.h  request.c  request.h  saml.c  saml.h
repodata/: 0bc5f05a68cd6cee3c8ceeb4af4131d29190e2070829bbbde6330a8645dbb87d-other.sqlite.bz2  1945260841022f184f3c21711e697c27e1e35cabc5a81dad2b6caf7c3559ca38-primary.sqlite.bz2  fb42e95a10077f0ea86619739f588ed4f67144ada47ec2a824237ba147482de6-filelists.sqlite.bz2  repomd.xml  repomd.xml.asc
